--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -2,7 +2,7 @@ server {
     listen       80;
     listen  [::]:80;
 
-    resolver 127.0.0.11 ipv6=off;
+    resolver kube-dns.kube-system.svc.cluster.local;
 
     server_name  localhost;
 
@@ -12,13 +12,13 @@ server {
         try_files $uri /index.html;
     }
 
-    location ~ ^/api/(.*)$ {
+    location ~ ^/(api|uploads)/(.*)$ {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $http_host;
         proxy_set_header X-NginX-Proxy true;
 
-        proxy_pass http://node:8080/api/$1$is_args$args;
+        proxy_pass http://mi-servicio-node.mern.svc.cluster.local:8080/$1/$2$is_args$args;
         proxy_redirect off;
     }
 }
